--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.mbientlab:metawear:3.8.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
